manifests/envs/qa/web-front-admision-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-qa-front-admision-service-sprint10
spec:
  selector:
    app: web-qa-front-admision-sprint10
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
